--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,6 @@ services:
     ports: 
       - '5000:5000'
   frontend:
-    build:
-      context: client
-      target: builder
+    build: client
     ports: 
-      - '3000:80'
+      - '3001:80'
