--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,2 @@
-VITE_SERVER_BASE_URL="https://vehicle-detection-35ju.onrender.com"
+# VITE_SERVER_BASE_URL="https://vehicle-detection-35ju.onrender.com"
+VITE_SERVER_BASE_URL="http://localhost:5000"
